# useful-noise

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  sound.rs  state.rs
src/sound/: brownish_noise.rs
