[package]
name = "useful-noise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_plot = "0.24.0"
glicol_synth = "0.13.2"
nannou = "0.18.1"
nannou_audio = "0.18.0"
nannou_egui = "0.5.0"
petgraph = "0.6.3"
rustfft = "6.1.0"
